@@ -15,6 +15,8 @@ Version vNext
 		-[Core] The RegisterDecorator method overload that accepts the predicate didn't supply the correct
 		 DecoratorPredicateContext when decorating multiple registrations with the same service type. The
 		 internal cached used the service type as key, not the InstanceProducer itself. (work item 19780).
+		-[Core] The container did not check for possible cyclic dependencies while resolving collections,
+		 which could cause a stackoverflow exception. (work item 19849).
 
 
 Version 2.2.3 (v2.2.3 RTM)  2013-05-05
